# treesearch-from-quartetscores

./: .gitignore  .gitmodules  CMakeLists.txt
eval/: analysis-score-rf.py  astralVsTreesearch.py  compare_rf.py  dataset_analysis.py  eval_conf_ds.py  eval_conf_ds_1.py  eval_conf_ds_2.py  eval_utils.py  evaluate.py  evaluate2.py  evaluate3.py  rf_distance.py
src/: distance_score.hpp  greedy.hpp  main.cpp  nni.hpp  objective_function.hpp  random.hpp  reduce_tree.hpp  simulated_annealing.hpp  spr.hpp  spr_iterator.hpp  starttree.hpp  tree_operations.hpp  treesearch.hpp  uquest_wrapper.hpp  utils.hpp
tests/: CMakeLists.txt  tests.cpp
tests/data/: yeast_all.tre  yeast_reference.tre
